force-app/main/default/objects/PageTemplate__c/PageTemplate__c.object-meta.xml
<CustomObject>
    <label>PageTemplate</label>
    <nameField>
        <encryptionScheme>None</encryptionScheme>
        <label>PageTemplate Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>PageTemplates</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>