force-app/main/default/objects/PageTemplate__c/fields/ContentBlockNames__c.field-meta.xml
<CustomField>
    <fullName>ContentBlockNames__c</fullName>
    <description>This field contains the names of the content block tags defined in the template.</description>
    <encryptionScheme>None</encryptionScheme>
    <label>ContentBlockNames</label>
    <length>2000</length>
    <type>LongTextArea</type>
</CustomField>