force-app/main/default/objects/PageTemplate__c/fields/Folder__c.field-meta.xml
<CustomField>
    <fullName>Folder__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Folder</label>
    <lookupFilter>
        <active>true</active>
        <errorMessage>The parent folder of a page template needs to be of type &#39;PageTemplate&#39;</errorMessage>
        <filterItems>
            <field>CMSFolder__c.Type__c</field>
            <operation>equals</operation>
            <value>PageTemplate</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>CMSFolder__c</referenceTo>
    <relationshipLabel>PageTemplates</relationshipLabel>
    <relationshipName>PageTemplates</relationshipName>
    <type>Lookup</type>
</CustomField>