force-app/main/default/objects/PageTemplate__c/fields/VisualForce_Page_Name__c.field-meta.xml
<CustomField>
    <fullName>VisualForce_Page_Name__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>VisualForce Page Name</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>