force-app/main/default/objects/PageTemplate__c/validationRules/PageTemplate_folder_can_not_be_empty.validationRule-meta.xml
<ValidationRule>
    <fullName>PageTemplate_folder_can_not_be_empty</fullName>
    <active>true</active>
    <description>A page template needs to have a parent Folder.</description>
    <errorConditionFormula>ISBLANK(Folder__c)</errorConditionFormula>
    <errorDisplayField>Folder__c</errorDisplayField>
    <errorMessage>A page template needs to have a parent Folder.</errorMessage>
</ValidationRule>